force-app/main/default/objects/Contact/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <formula>FirstName + &apos; &apos; +  LastName</formula>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>