force-app/main/default/objects/Contact/fields/Created_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Name__c</fullName>
    <formula>CreatedBy.FirstName + &apos; &apos; +  CreatedBy.LastName</formula>
    <label>Created By Name</label>
    <type>Text</type>
</CustomField>