force-app/main/default/objects/Contact/fields/English_Proficiency__c.field-meta.xml
<CustomField>
    <fullName>English_Proficiency__c</fullName>
    <label>English Proficiency</label>
    <length>50</length>
    <type>Text</type>
</CustomField>