force-app/main/default/objects/Contact/fields/Ethnicity_of_Household__c.field-meta.xml
<CustomField>
    <fullName>Ethnicity_of_Household__c</fullName>
    <label>Ethnicity of Household</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hispanic</fullName>
            </value>
            <value>
                <fullName>Not-Hispanic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>