force-app/main/default/objects/Contact/fields/Household_Account__c.field-meta.xml
<CustomField>
    <fullName>Household_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Household Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Person Accounts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>