force-app/main/default/objects/Contact/fields/Household_resides_in__c.field-meta.xml
<CustomField>
    <fullName>Household_resides_in__c</fullName>
    <label>Household resides in</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Household lives in rural area</fullName>
            </value>
            <value>
                <fullName>Household does not lives in rural area</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>