force-app/main/default/objects/Contact/fields/Immigration_Status__c.field-meta.xml
<CustomField>
    <fullName>Immigration_Status__c</fullName>
    <label>Immigration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Citizen</fullName>
            </value>
            <value>
                <fullName>Work Visa</fullName>
            </value>
            <value>
                <fullName>Green Card Holder</fullName>
            </value>
            <value>
                <fullName>Applicant for Permanent Residence</fullName>
                <isActive>false</isActive>
                <label>Applicant for Permanent Residence</label>
            </value>
            <value>
                <fullName>Canadian Citizen</fullName>
                <isActive>false</isActive>
                <label>Canadian Citizen</label>
            </value>
            <value>
                <fullName>Do not know</fullName>
                <isActive>false</isActive>
                <label>Do not know</label>
            </value>
            <value>
                <fullName>No Status/Visitor</fullName>
                <isActive>false</isActive>
                <label>No Status/Visitor</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Permanent Resident/Landed Immigrant</fullName>
                <isActive>false</isActive>
                <label>Permanent Resident/Landed Immigrant</label>
            </value>
            <value>
                <fullName>Refugee Claimant</fullName>
                <isActive>false</isActive>
                <label>Refugee Claimant</label>
            </value>
            <value>
                <fullName>Refugee/Protected Person</fullName>
                <isActive>false</isActive>
                <label>Refugee/Protected Person</label>
            </value>
            <value>
                <fullName>Sponsored</fullName>
                <isActive>false</isActive>
                <label>Sponsored</label>
            </value>
            <value>
                <fullName>Temporary Resident Employment</fullName>
                <isActive>false</isActive>
                <label>Temporary Resident Employment</label>
            </value>
            <value>
                <fullName>Temporary Resident Student</fullName>
                <isActive>false</isActive>
                <label>Temporary Resident Student</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>