force-app/main/default/objects/Contact/fields/Phone_Type__c.field-meta.xml
<CustomField>
    <fullName>Phone_Type__c</fullName>
    <label>Phone Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cell Number</fullName>
            </value>
            <value>
                <fullName>Home Number</fullName>
            </value>
            <value>
                <fullName>Other, specify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>