force-app/main/default/objects/Contact/fields/Race_Of_Household__c.field-meta.xml
<CustomField>
    <fullName>Race_Of_Household__c</fullName>
    <label>Race Of Household</label>
    <length>50</length>
    <type>Text</type>
</CustomField>