force-app/main/default/objects/Contact/fields/Relationship_To_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Relationship_To_Applicant__c</fullName>
    <label>Relationship To Applicant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Dependent</fullName>
            </value>
            <value>
                <fullName>Dependent Adult</fullName>
            </value>
            <value>
                <fullName>Roommate/Boarder</fullName>
            </value>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Sibling</fullName>
            </value>
            <value>
                <fullName>Grandchild</fullName>
            </value>
            <value>
                <fullName>Grandparent</fullName>
            </value>
            <value>
                <fullName>Other Relative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>