force-app/main/default/objects/Contact/fields/Specify_other_relationship__c.field-meta.xml
<CustomField>
    <fullName>Specify_other_relationship__c</fullName>
    <label>Specify other relationship</label>
    <length>50</length>
    <type>Text</type>
</CustomField>