force-app/main/default/objects/Contact/fields/Type_Of_Race__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Race__c</fullName>
    <label>Type Of Race</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>American Indian/Alaskan Native</fullName>
            </value>
            <value>
                <fullName>Asian</fullName>
            </value>
            <value>
                <fullName>Black of African American</fullName>
            </value>
            <value>
                <fullName>Native Hawalian or Other pacific Islander</fullName>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
            <value>
                <fullName>American Indian or Alaskan Native and White</fullName>
            </value>
            <value>
                <fullName>Asian and White</fullName>
            </value>
            <value>
                <fullName>Black of African American and white</fullName>
            </value>
            <value>
                <fullName>American Indian or Alaska Native and Black or African American</fullName>
            </value>
            <value>
                <fullName>Other Multiple race</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>