force-app/main/default/objects/Contact/fields/Veteran__c.field-meta.xml
<CustomField>
    <fullName>Veteran__c</fullName>
    <label>Veteran</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Undisclosed</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Applicant for Permanent Residence</fullName>
                <isActive>false</isActive>
                <label>Applicant for Permanent Residence</label>
            </value>
            <value>
                <fullName>Canadian Citizen</fullName>
                <isActive>false</isActive>
                <label>Canadian Citizen</label>
            </value>
            <value>
                <fullName>Do not know</fullName>
                <isActive>false</isActive>
                <label>Do not know</label>
            </value>
            <value>
                <fullName>No Status/Visitor</fullName>
                <isActive>false</isActive>
                <label>No Status/Visitor</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Permanent Resident/Landed Immigrant</fullName>
                <isActive>false</isActive>
                <label>Permanent Resident/Landed Immigrant</label>
            </value>
            <value>
                <fullName>Refugee Claimant</fullName>
                <isActive>false</isActive>
                <label>Refugee Claimant</label>
            </value>
            <value>
                <fullName>Refugee/Protected Person</fullName>
                <isActive>false</isActive>
                <label>Refugee/Protected Person</label>
            </value>
            <value>
                <fullName>Sponsored</fullName>
                <isActive>false</isActive>
                <label>Sponsored</label>
            </value>
            <value>
                <fullName>Temporary Resident Employment</fullName>
                <isActive>false</isActive>
                <label>Temporary Resident Employment</label>
            </value>
            <value>
                <fullName>Temporary Resident Student</fullName>
                <isActive>false</isActive>
                <label>Temporary Resident Student</label>
            </value>
            <value>
                <fullName>Unsure</fullName>
                <isActive>false</isActive>
                <label>Unsure</label>
            </value>
            <value>
                <fullName>Yes - Canadian Armed Forces</fullName>
                <isActive>false</isActive>
                <label>Yes - Canadian Armed Forces</label>
            </value>
            <value>
                <fullName>Yes – RCMP</fullName>
                <isActive>false</isActive>
                <label>Yes – RCMP</label>
            </value>
            <value>
                <fullName>Yes – Veteran Allies</fullName>
                <isActive>false</isActive>
                <label>Yes – Veteran Allies</label>
            </value>
            <value>
                <fullName>Yes – Veteran Civilian (Served but not as a soldier, For example, served as a cook)</fullName>
                <isActive>false</isActive>
                <label>Yes – Veteran Civilian (Served but not as a soldier, For example, served as a cook)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>